# easy_minecraft_server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
backend/: .gitignore  Cargo.toml
backend/docs/: api.md  mc-server-installer.md
backend/src/: auth.rs  blacklist.rs  cli.rs  db.rs  errors.rs  ip_ban.rs  main.rs  middleware.rs  models.rs  serve.rs  settings.rs
backend/src/cmd/: admin.rs  mod.rs  service.rs
backend/src/mc-server-installer/src/: error.rs  lib.rs  paper.rs
backend/src/mc-server-manager/: Cargo.toml
backend/src/mc-server-manager/src/: error.rs  instance.rs  lib.rs  log.rs  manager.rs  player.rs  properties.rs  registry.rs  version.rs  world.rs
backend/src/mc-server-manager/src/managers/: mod.rs  mods.rs  server.rs  world.rs
backend/src/mc-server-manager/src/mc-server-installer/: Cargo.toml
backend/src/mc-server-manager/src/mc-server-installer/src/: fabric.rs  forge.rs  lib.rs  modrinth.rs  neoforge.rs  paper.rs  purpur.rs  vanilla.rs
backend/src/serve/: admin.rs  instances.rs  mod.rs  mods.rs  ram.rs  worlds.rs
docs/: external_apis.md  server_software_guide.md
frontend/: AGENT.md  README.md  package.json  svelte.config.js  wrangler.jsonc
frontend/src/: app.d.ts
frontend/src/lib/: api.ts  stores.ts  types.ts  utils.ts
frontend/src/lib/components/: create-server-dialog.svelte  log-viewer.svelte  server-card.svelte  sidebar.svelte
frontend/src/lib/config/: mod-filters.ts  properties.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/connection/: +page.svelte
frontend/src/routes/servers/[id]/: +page.svelte
frontend/src/routes/servers/[id]/config/: +page.svelte
frontend/src/routes/servers/[id]/console/: +page.svelte
frontend/src/routes/servers/[id]/logs/: +page.svelte
frontend/src/routes/servers/[id]/mods/: +page.svelte
frontend/src/routes/servers/[id]/mods/[slug]/: +page.svelte
frontend/src/routes/servers/[id]/world/: +page.svelte
frontend/src/routes/servers/new/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/users/: +page.svelte
src/: auth.rs  config.rs  errors.rs  main.rs  middleware.rs
src/mc-server-installer/src/: fabric.rs  neoforge.rs  purpur.rs  vanilla.rs
src/mc-server-manager/src/: lib.rs
