[package]
name = "eazymc-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "eazymc-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2"
schemars = { version = "1", features = ["chrono04"] }
zip = { version = "2", default-features = false, features = ["deflate", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
mc-server-manager = { path = "src/mc-server-manager" }
