[package]
name = "mc-server-manager"
version = "0.1.0"
edition = "2024"
description = "Spawn, monitor, and control Minecraft Java Edition server processes"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "fs"] }
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
mc-server-installer = { path = "src/mc-server-installer" }
