[package]
name = "mc-server-installer"
version = "0.1.0"
edition = "2024"
description = "Download and install Minecraft server software from multiple sources"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
sha1 = { version = "0.6", features = ["std"] }
hex = "0.4"
futures-util = "0.3"
